# DermAI

backend/DermaAI/: .gitignore  README.md  classes.txt  get_folder_name.py  main.py  pyproject.toml  requirements.txt  setup.py  test_predict.json
backend/DermaAI/IAC/: backend.tf  main.tf  readme.md  variables.tf
backend/DermaAI/IAC/modules/api_gateway/: main.tf  variables.tf
backend/DermaAI/IAC/modules/dynamodb/: main.tf  outputs.tf  variables.tf
backend/DermaAI/cli/: cli_test.py  derma_cli.py  labels.txt  readme.md
backend/DermaAI/cli/commands/: invoke.py  result.py  submit.py
backend/DermaAI/cli/utils/: config.py
backend/DermaAI/dermaai_cli/: .gitignore  cli.py  readme.md
backend/DermaAI/dermaai_cli/commands/: interactive.py  models.py  predict.py
backend/DermaAI/dermaai_cli/core/: inference.py  model_manager.py  output.py
backend/DermaAI/dermaai_cli/docs/: cli-manpage.md
backend/DermaAI/doc/: Architecture_flow.md  EDA.md  preprocessing_report.md  train_interpretation_1.md  training_interpretation_2.md
backend/DermaAI/lambdas/: readme.md
backend/DermaAI/lambdas/classification/: Dockerfile  main.py  requirements.txt
backend/DermaAI/lambdas/generate_upload_urls/: Dockerfile  main.py
backend/DermaAI/lambdas/get_result/: main.py
backend/DermaAI/lambdas/submit_request/: main.py
backend/DermaAI/notebooks/: classification_report.csv  classification_report.md  eda_skin_disease_dataset.ipynb  resnet18_training_dermai.ipynb  train_scripts_version.ipynb
backend/DermaAI/preprocessing/: image_resizer.py  split_data.py
doc/: apa-styled.docx  (+7 more)
(+25 files in other folders)
